--- a/web/style/main.less
+++ b/web/style/main.less
@@ -29,3 +29,22 @@
 .hide-down {
 	transform: translateY(100%);
 }
+
+
+
+
+// Spin animation
+.spinning {
+	animation: spin 3s infinite linear;
+	//-webkit-animation: spin2 3s infinite linear;
+}
+
+@keyframes spin {
+    from { transform: scale(1) rotate(0deg); }
+    to { transform: scale(1) rotate(360deg); }
+}
+
+@-webkit-keyframes spin2 {
+    from { -webkit-transform: rotate(0deg); }
+    to { -webkit-transform: rotate(360deg); }
+}
