--- a/web/style/main.less
+++ b/web/style/main.less
@@ -1,8 +1,8 @@
 // TODO styling for the SoGive app
 
+
 .avoid-navbar {
     margin-top:100px;
-    border: solid blue 1px;
 }
 
 // Hides an item by sliding it to one side while fading out (and shows by the reverse)
@@ -48,3 +48,7 @@
     from { -webkit-transform: rotate(0deg); }
     to { -webkit-transform: rotate(360deg); }
 }
+
+
+// Page specific stuff
+@import "SearchPage.less";
