--- a/web/style/main.less
+++ b/web/style/main.less
@@ -5,50 +5,22 @@
     margin-top:100px;
 }
 
-// Hides an item by sliding it to one side while fading out (and shows by the reverse)
-.slide-hide {
-	transition: opacity 0.25s, transform 0.25s, visibility 0.25s;
-}
 
-.hide-left, .hide-right, .hide-down {
-	position: absolute !important;
-	margin-top: inherit;
-	top: 0;
-	opacity: 0;
-	visibility: hidden;
+img.logo {
+	max-width:32px;	
+	max-height:32px;	
 }
-
-.hide-left {
-	transform: translateX(-30%);
+img.logo-small {
+	max-width:16px;	
+	max-height:16px;	
 }
-
-.hide-right {
-	transform: translateX(30%);
-}
-
-.hide-down {
-	transform: translateY(100%);
+img.logo-large {
+	max-width:64px;	
+	max-height:64px;	
 }
 
 
-
-
-// Spin animation
-.spinning {
-	animation: spin 3s infinite linear;
-	//-webkit-animation: spin2 3s infinite linear;
-}
-
-@keyframes spin {
-    from { transform: scale(1) rotate(0deg); }
-    to { transform: scale(1) rotate(360deg); }
-}
-
-@-webkit-keyframes spin2 {
-    from { -webkit-transform: rotate(0deg); }
-    to { -webkit-transform: rotate(360deg); }
-}
-
+@import "animation.less";
 
 // Page specific stuff
 @import "SearchPage.less";
