--- a/web/style/main.less
+++ b/web/style/main.less
@@ -24,3 +24,13 @@ img.logo-large {
 
 // Page specific stuff
 @import "SearchPage.less";
+
+// https://css-tricks.com/snippets/css/a-guide-to-flexbox/
+.flexbox-1row {
+	display: flex;
+	flex-wrap: nowrap;
+	justify-content: center; // flex-start | flex-end | center | space-between | space-around;
+}
+.flexitem {
+
+}
