Various visual tweaks

--- a/web/style/main.less
+++ b/web/style/main.less
@@ -54,3 +54,8 @@ img.logo-large {
 	align-items: center;
 	justify-content: center;
 }
+
+img.charity-logo {
+	max-width: 192px;
+	max-height: 192px;
+}
