--- a/web/style/main.css
+++ b/web/style/main.css
@@ -77,3 +77,7 @@ img.logo-large {
   align-items: center;
   justify-content: center;
 }
+img.charity-logo {
+  max-width: 192px;
+  max-height: 192px;
+}
