--- a/web/style/main.less
+++ b/web/style/main.less
@@ -19,6 +19,10 @@ img.logo-large {
 	max-height:64px;	
 }
 
+img.project-image {
+	max-width:300px;
+	max-height:300px;
+}
 
 @import "animation.less";
 
