minor-less-refactor

--- a/web/style/main.less
+++ b/web/style/main.less
@@ -19,17 +19,14 @@ img.logo-large {
 	max-height:64px;	
 }
 
-img.project-image {
-	max-width:300px;
-	max-height:300px;
-}
 
 @import "animation.less";
 
 // Page specific stuff
 @import "SearchPage.less";
+@import "CharityPage.less";
 
-// https://css-tricks.com/snippets/css/a-guide-to-flexbox/
+/* https://css-tricks.com/snippets/css/a-guide-to-flexbox/ */
 .flexbox-1row {
 	display: flex;
 	flex-wrap: nowrap;
