adding padding to the top and bottom of each search result, for easier reading

--- a/web/style/main.css
+++ b/web/style/main.css
@@ -56,6 +56,11 @@ img.logo-large {
 .SearchResults {
   margin-top: 50px;
 }
+img.project-image {
+  max-width: 300px;
+  max-height: 300px;
+}
+/* https://css-tricks.com/snippets/css/a-guide-to-flexbox/ */
 .flexbox-1row {
   display: flex;
   flex-wrap: nowrap;
