--- a/web/style/main.less
+++ b/web/style/main.less
@@ -1,10 +1,13 @@
-// TODO styling for the SoGive app
-
+// Styling for the SoGive app
+@import "colours.less";
 
 .avoid-navbar {
     margin-top:100px;
 }
 
+#navbar {
+	background-color: @navbarcolour;
+}
 
 img.logo {
 	width:32px;	
