--- a/web/style/main.less
+++ b/web/style/main.less
@@ -6,8 +6,87 @@
 }
 
 #navbar {
-	background-color: @navbarcolour;
+	background-color: @colour-03;
 }
+
+.navbar-inverse {
+	background-color: @colour-03;
+}
+
+.navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:focus, .navbar-inverse .navbar-nav>.active>a:hover {
+	background-color: @colour-03;
+}
+
+
+.btn-showall {
+	background-color: @colour-02;
+	color: @colour-05;
+	width: 9vh;
+	height: 3vh;
+	border-radius: 7%;
+	font-size: 1em;
+}
+
+.sogive-search {
+	width: 100% !important;
+}
+
+.no-margin {
+	margin-top: 0px;
+	margin-bottom: 0px;
+	margin-left: 0px;
+	margin-right: 0px;
+}
+
+.no-margin-bottom {
+	margin-bottom: 0px;
+}
+
+.clear-search {
+	background-color: transparent;
+	color: grey;
+	border-radius: none;
+	border-color: transparent;
+}
+
+.clear-search-btn {
+	background-color: transparent;
+	color: grey;
+	border-radius: 0px;
+	border-color: transparent;
+	border-bottom: 1px solid @colour-03;
+	height: 8vh;
+	&:hover, &:active, &:focus, &:visited {
+		background-color: transparent;
+		color: grey;
+		border-radius: 0px;
+		border-color: transparent;
+		border-bottom: 1px solid @colour-03;
+		height: 8vh;
+	}
+}
+
+.sogive-search-box {
+	border-top: none;
+	border-left: none;
+	border-right: none;
+	border-bottom: 1px solid @colour-03;
+	border-radius: 0px !important;
+	outline: 0;
+	height: 8vh !important;
+	font-size: 2em !important;
+
+}
+
+.featured-charities-header {
+	font-size: 1em;
+	color: @colour-03;
+	border-bottom: 2px solid @colour-01;
+}
+
+.featured-charities {
+}
+
 
 img.logo {
 	width:32px;	
@@ -22,6 +101,10 @@ img.logo-large {
 	max-height:64px;	
 }
 
+.sogive-logo-footer {
+	width: 12vh;
+	height: auto;
+}
 
 @import "animation.less";
 
