--- a/web/style/main.less
+++ b/web/style/main.less
@@ -106,6 +106,10 @@ img.logo-large {
 	height: auto;
 }
 
+.cheapverticalspace {
+	height: 10em;
+}
+
 @import "animation.less";
 
 // Page specific stuff
