--- a/web/style/SearchPage.less
+++ b/web/style/SearchPage.less
@@ -1,9 +1,23 @@
+@import "colours.less";
 
 .SearchResults {
     margin-top: 50px;
 }
 
+.num-results {
+	border-bottom: 1px solid @colour-02;
+	font-size: 1em;
+	margin-bottom: 2vh;
+}
+
+.unready-results {
+	margin-top: 10em;
+	margin-bottom: 5em;
+	border-bottom: 1px dashed @colour-01;
+}
+
 .SearchResult {
-	padding-top: 5px;
-	padding-bottom: 5px;
+	padding-top: 2vh;
+	padding-bottom: 2vh;
+	border-bottom: 1px solid @colour-01;
 }
