--- a/web/style/main.css
+++ b/web/style/main.css
@@ -134,9 +134,20 @@ img.logo-large {
 .SearchResults {
   margin-top: 50px;
 }
+.num-results {
+  border-bottom: 1px solid #A49F79;
+  font-size: 1em;
+  margin-bottom: 2vh;
+}
+.unready-results {
+  margin-top: 10em;
+  margin-bottom: 5em;
+  border-bottom: 1px dashed #F04B47;
+}
 .SearchResult {
-  padding-top: 5px;
-  padding-bottom: 5px;
+  padding-top: 2vh;
+  padding-bottom: 2vh;
+  border-bottom: 1px solid #F04B47;
 }
 img.project-image {
   max-width: 300px;
