did a bunch of work on the charity page today.  committing it all in one big blob

--- a/web/style/CharityPage.less
+++ b/web/style/CharityPage.less
@@ -1,6 +1,65 @@
-
+@import "colours.less";
 
 img.project-image {
 	max-width:300px;
 	max-height:300px;
+}
+
+.charity-logo-div {
+	width: 13vh;
+	height: auto;
+}
+
+.CharityProfile-div {
+	border-bottom: 1px solid @colour-02;
+}
+
+.CharityProfile {
+	font-size: 1em;
+}
+
+.project-image {
+	width: 30vh;
+	height: auto;
+}
+
+.upper-padding {
+	padding-top: 3vh;
+}
+
+.upper-margin {
+	margin-top: 3vh;
+}
+
+.donateto {
+	background-color: @colour-02;
+	font-size: 1em;
+	color: @colour-05;
+	border-bottom: 1px solid @colour-03;
+	padding-left: 2%;
+}
+
+.charity-project-title-div {
+	margin-top: 3vh;
+	border-bottom: 1px solid @colour-02;
+}
+
+.charity-project-div {
+	margin-top: 1vh;
+}
+
+.project-name {
+	font-size: 1em;
+	color: @colour-03;
+}
+
+.inputs-outputs {
+	border-top: 1px solid @colour-03;
+	border-bottom: 1px solid @colour-03;
+	border-left: 1px solid @colour-03;
+	border-right: 1px solid @colour-03;
+}
+
+.inputs {
+	border-right: 1px solid @colour-03;
 }
