--- a/web/style/main.less
+++ b/web/style/main.less
@@ -147,6 +147,14 @@ img.logo-large {
 }
 
 img.charity-logo {
-	max-width: 192px;
-	max-height: 192px;
+	width: 10vh;
+	height: auto;
+}
+
+.colour-03-text {
+	color: @colour-03;
+}
+
+body {
+	color: @colour-03;
 }
