--- a/web/style/SearchPage.less
+++ b/web/style/SearchPage.less
@@ -21,3 +21,13 @@
 	padding-bottom: 2vh;
 	border-bottom: 1px solid @colour-01;
 }
+
+.FeaturedSidebar.affix-top {
+	position: static;
+	margin-top: 3vh;
+}
+
+.FeaturedSidebar.affix {
+	position: fixed;
+	top: 4vh;
+}
