committing my changes for the day

--- a/web/style/CharityPage.less
+++ b/web/style/CharityPage.less
@@ -37,6 +37,7 @@ img.project-image {
 	color: @colour-05;
 	border-bottom: 1px solid @colour-03;
 	padding-left: 2%;
+	margin: 1% auto 2%;
 }
 
 .charity-project-title-div {
