--- a/web/style/main.less
+++ b/web/style/main.less
@@ -110,11 +110,16 @@ img.logo-large {
 	height: 10em;
 }
 
+.smallverticalspace {
+	height: 2em;
+}
+
 @import "animation.less";
 
 // Page specific stuff
 @import "SearchPage.less";
 @import "CharityPage.less";
+@import "Donation.less";
 
 /* https://css-tricks.com/snippets/css/a-guide-to-flexbox/ */
 .flexbox-1row {
@@ -157,4 +162,13 @@ img.charity-logo {
 
 body {
 	color: @colour-03;
+}
+
+.impact-text {
+	text-align: center;
+}
+
+.impact-units-amount {
+	font-size: 2.5em;
+	margin-bottom: 0;
 }
