--- a/web/style/main.less
+++ b/web/style/main.less
@@ -172,3 +172,12 @@ body {
 	font-size: 2.5em;
 	margin-bottom: 0;
 }
+
+.impact-text-horizontal-div {
+	width: 100%;
+}
+
+
+.impact-text-horizontal {
+	text-align: justify;
+}
