have added a nicer looking font, one that is a close match to Corrado's illustrations

--- a/web/style/main.css
+++ b/web/style/main.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: 'Roboto';
+  src: url('../fonts/Roboto-Regular.ttf');
+}
+body {
+  font-family: 'Roboto';
+}
 .avoid-navbar {
   margin-top: 100px;
 }
