--- a/web/style/main.less
+++ b/web/style/main.less
@@ -1,6 +1,16 @@
 // Styling for the SoGive app
 @import "colours.less";
 
+@font-face {
+	font-family: 'Roboto';
+	src: url('../fonts/Roboto-Regular.ttf');
+}
+
+body {
+	font-family: 'Roboto';
+}
+
+
 .avoid-navbar {
     margin-top:100px;
 }
