I believe that I am done optimising the site for mobile

--- a/web/style/CharityPage.less
+++ b/web/style/CharityPage.less
@@ -23,6 +23,14 @@ img.project-image {
 	height: auto;
 }
 
+.project-image-mobile {
+	max-width: 100%;
+	height: auto;
+	padding-left: 1%;
+	padding-right: 1%;
+}
+
+
 .upper-padding {
 	padding-top: 3vh;
 }
@@ -63,4 +71,20 @@ img.project-image {
 
 .inputs {
 	border-right: 1px solid @colour-03;
+}
+
+.inputs-mobile {
+}
+
+.project-story-text {
+	text-align: center;
+}
+
+.outputs-mobile {
+	padding-bottom: 15px;
+}
+
+.citation-url {
+	font-size: 85%;
+	word-wrap: break-word;
 }
