--- a/web/style/main.less
+++ b/web/style/main.less
@@ -37,6 +37,15 @@ body {
 	font-size: 1em;
 }
 
+.btn-showall-mobile {
+	background-color: @colour-02;
+	color: @colour-05;
+	width: 13vh;
+	height: 5vh;
+	border-radius: 7%;
+	font-size: 1em;
+}
+
 .sogive-search {
 	width: 100% !important;
 }
@@ -88,6 +97,19 @@ body {
 
 }
 
+.sogive-search-box-mobile {
+	border-top: none;
+	border-left: none;
+	border-right: none;
+	border-bottom: 1px solid @colour-03;
+	border-radius: 0px !important;
+	outline: 0;
+	height: 8vh !important;
+	font-size: 1em !important;
+
+}
+
+
 .featured-charities-header {
 	font-size: 1em;
 	color: @colour-03;
@@ -114,6 +136,7 @@ img.logo-large {
 .sogive-logo-footer {
 	width: 12vh;
 	height: auto;
+
 }
 
 .cheapverticalspace {
@@ -166,6 +189,11 @@ img.charity-logo {
 	height: auto;
 }
 
+img.charity-logo-mobile {
+	width: 30%;
+	height: auto;
+}
+
 .colour-03-text {
 	color: @colour-03;
 }
@@ -190,4 +218,69 @@ body {
 
 .impact-text-horizontal {
 	text-align: justify;
+}
+
+.sogive-footer {
+	width: 100%;
+	height: auto;
+	background-color: #EEEEEE;
+	position: relative;
+	bottom: 0;
+}
+
+.sogive-footer-mobile {
+	width: 100%;
+	height: auto;
+	background-color: #EEEEEE;
+	position: relative;
+	bottom: 0;
+}
+
+
+.sogive-footer-text {
+	color: @colour-03;
+}
+
+.col-xs-1 {
+	padding-left: 1px !important;
+	padding-right: 1px !important;
+}
+
+.col-xs-2 {
+	padding-left: 1px !important;
+	padding-right: 1px !important;
+}
+
+.col-xs-3 {
+	padding-left: 1px !important;
+	padding-right: 1px !important;
+}
+
+.col-xs-4 {
+	padding-left: 1px !important;
+	padding-right: 1px !important;
+}
+
+.col-xs-5 {
+	padding-left: 1px !important;
+	padding-right: 1px !important;
+}
+
+.col-xs-6 {
+	padding-left: 1px !important;
+	padding-right: 1px !important;
+}
+
+.col-xs-7 {
+	padding-left: 1px !important;
+	padding-right: 1px !important;
+}
+
+.col-xs-8 {
+	padding-left: 1px !important;
+	padding-right: 1px !important;
+}
+
+.full-width {
+	width: 100% !important;
 }
