--- a/web/style/colours.less
+++ b/web/style/colours.less
@@ -1,8 +1,21 @@
+/* Corrado's original palette */
 @colour-01: #F04B47;
 @colour-02: #A49F79;
 @colour-03: #262741;
 @colour-04: #323257;
 @colour-05: #FFFFFF;
+
+
+/* Palette Example 01
+@colour-01: #77C9D4;
+@colour-02: #57BC90;
+@colour-03: #015249;
+@colour-04: #A5A5AF;
+@colour-05: #FFFFFF;
+*/
+
+
+
 
 
 @SogiveBrandYellow: #f60;
