--- a/web/style/footer.less
+++ b/web/style/footer.less
@@ -1,4 +1,4 @@
-/* Sticky footer styles
+/* footer styles
 -------------------------------------------------- */
 html {
   position: relative;
@@ -8,6 +8,7 @@ body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
 }
+
 .footer {
   position: absolute;
   bottom: 0;
@@ -15,4 +16,10 @@ body {
   /* Set the fixed height of the footer here */
   height: 60px;
   background-color: #f5f5f5;
+}
+
+.sogive-logo-footer {
+	height:50px;
+	margin:5px;
+	float: 'left'; 
 }
