--- a/web/style/main.less
+++ b/web/style/main.less
@@ -6,10 +6,6 @@
 	src: url('../fonts/Roboto-Regular.ttf');
 }
 
-body {
-	font-family: 'Roboto';
-}
-
 
 .avoid-navbar {
     margin-top:100px;
@@ -133,12 +129,6 @@ img.logo-large {
 	max-height:64px;	
 }
 
-.sogive-logo-footer {
-	width: 12vh;
-	height: auto;
-
-}
-
 .cheapverticalspace {
 	height: 10em;
 }
@@ -153,6 +143,7 @@ img.logo-large {
 @import "SearchPage.less";
 @import "CharityPage.less";
 @import "Donation.less";
+@import "footer.less";
 
 /* https://css-tricks.com/snippets/css/a-guide-to-flexbox/ */
 .flexbox-1row {
@@ -199,6 +190,7 @@ img.charity-logo-mobile {
 }
 
 body {
+	font-family: 'Roboto';
 	color: @colour-03;
 }
 
