--- a/web/style/SearchPage.less
+++ b/web/style/SearchPage.less
@@ -36,3 +36,77 @@
 	height: 64px;
 	width: auto;
 }
+
+
+
+
+.btn-showall {
+	background-color: @colour-02;
+	color: @colour-05;
+	width: 9vh;
+	height: 3vh;
+	border-radius: 7%;
+	font-size: 1em;
+}
+
+.btn-showall-mobile {
+	background-color: @colour-02;
+	color: @colour-05;
+	width: 13vh;
+	height: 5vh;
+	border-radius: 7%;
+	font-size: 1em;
+}
+
+
+.sogive-search {
+	width: 100% !important;
+}
+
+.clear-search {
+	background-color: transparent;
+	color: grey;
+	border-radius: none;
+	border-color: transparent;
+}
+
+.clear-search-btn {
+	background-color: transparent;
+	color: grey;
+	border-radius: 0px;
+	border-color: transparent;
+	border-bottom: 1px solid @colour-03;
+	height: 8vh;
+	&:hover, &:active, &:focus, &:visited {
+		background-color: transparent;
+		color: grey;
+		border-radius: 0px;
+		border-color: transparent;
+		border-bottom: 1px solid @colour-03;
+		height: 8vh;
+	}
+}
+
+.sogive-search-box {
+	border-top: none;
+	border-left: none;
+	border-right: none;
+	border-bottom: 1px solid @colour-03;
+	border-radius: 0px !important;
+	outline: 0;
+	height: 8vh !important;
+	font-size: 2em !important;
+
+}
+
+.sogive-search-box-mobile {
+	border-top: none;
+	border-left: none;
+	border-right: none;
+	border-bottom: 1px solid @colour-03;
+	border-radius: 0px !important;
+	outline: 0;
+	height: 8vh !important;
+	font-size: 1em !important;
+
+}
