--- a/web/style/SearchPage.less
+++ b/web/style/SearchPage.less
@@ -40,6 +40,17 @@
 
 
 
+.featured-charities-header {
+	font-size: 1em;
+	color: @colour-03;
+	border-bottom: 2px solid @colour-01;
+}
+
+.featured-charities {
+}
+
+
+
 .btn-showall {
 	background-color: @colour-02;
 	color: @colour-05;
