--- a/web/style/SearchPage.css
+++ b/web/style/SearchPage.css
@@ -10,19 +10,19 @@
   margin-top: 50px;
 }
 .num-results {
-  border-bottom: 1px solid #A49F79;
+  border-bottom: 1px solid #a49f79;
   font-size: 1em;
   margin-bottom: 2vh;
 }
 .unready-results {
   margin-top: 10em;
   margin-bottom: 5em;
-  border-bottom: 1px dashed #F04B47;
+  border-bottom: 1px dashed #f04b47;
 }
 .SearchResult {
   padding-top: 2vh;
   padding-bottom: 2vh;
-  border-bottom: 1px solid #F04B47;
+  border-bottom: 1px solid #f04b47;
 }
 .FeaturedSidebar.affix-top {
   position: static;
@@ -35,4 +35,73 @@
 .charity-logo {
   height: 64px;
   width: auto;
+}
+.featured-charities-header {
+  font-size: 1em;
+  color: #262741;
+  border-bottom: 2px solid #f04b47;
+}
+.btn-showall {
+  background-color: #a49f79;
+  color: #ffffff;
+  width: 9vh;
+  height: 3vh;
+  border-radius: 7%;
+  font-size: 1em;
+}
+.btn-showall-mobile {
+  background-color: #a49f79;
+  color: #ffffff;
+  width: 13vh;
+  height: 5vh;
+  border-radius: 7%;
+  font-size: 1em;
+}
+.sogive-search {
+  width: 100% !important;
+}
+.clear-search {
+  background-color: transparent;
+  color: grey;
+  border-radius: none;
+  border-color: transparent;
+}
+.clear-search-btn {
+  background-color: transparent;
+  color: grey;
+  border-radius: 0px;
+  border-color: transparent;
+  border-bottom: 1px solid #262741;
+  height: 8vh;
+}
+.clear-search-btn:hover,
+.clear-search-btn:active,
+.clear-search-btn:focus,
+.clear-search-btn:visited {
+  background-color: transparent;
+  color: grey;
+  border-radius: 0px;
+  border-color: transparent;
+  border-bottom: 1px solid #262741;
+  height: 8vh;
+}
+.sogive-search-box {
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom: 1px solid #262741;
+  border-radius: 0px !important;
+  outline: 0;
+  height: 8vh !important;
+  font-size: 2em !important;
+}
+.sogive-search-box-mobile {
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom: 1px solid #262741;
+  border-radius: 0px !important;
+  outline: 0;
+  height: 8vh !important;
+  font-size: 1em !important;
 }
