--- a/web/style/footer.less
+++ b/web/style/footer.less
@@ -16,10 +16,11 @@ body {
   /* Set the fixed height of the footer here */
   height: 60px;
   background-color: #f5f5f5;
+  overflow: hidden;
 }
 
 .sogive-logo-footer {
 	height:50px;
 	margin:5px;
-	float: 'left'; 
+	float: left; 
 }
