SoGive search page buttons + css refactor

--- a/web/style/CharityPage.less
+++ b/web/style/CharityPage.less
@@ -23,14 +23,6 @@ img.project-image {
 	height: auto;
 }
 
-.project-image-mobile {
-	max-width: 100%;
-	height: auto;
-	padding-left: 1%;
-	padding-right: 1%;
-}
-
-
 .upper-padding {
 	padding-top: 3vh;
 }
@@ -73,18 +65,16 @@ img.project-image {
 	border-right: 1px solid @colour-03;
 }
 
-.inputs-mobile {
-}
-
 .project-story-text {
 	text-align: center;
 }
 
-.outputs-mobile {
-	padding-bottom: 15px;
-}
 
 .citation-url {
 	font-size: 85%;
 	word-wrap: break-word;
+}
+
+.inputs h4, .outputs h4 {
+	color: @colour-03;
 }
