--- a/web/style/SearchPage.css
+++ b/web/style/SearchPage.css
@@ -10,19 +10,19 @@
   margin-top: 50px;
 }
 .num-results {
-  border-bottom: 1px solid #a49f79;
+  border-bottom: 1px solid #A49F79;
   font-size: 1em;
   margin-bottom: 2vh;
 }
 .unready-results {
   margin-top: 10em;
   margin-bottom: 5em;
-  border-bottom: 1px dashed #f04b47;
+  border-bottom: 1px dashed #F04B47;
 }
 .SearchResult {
   padding-top: 2vh;
   padding-bottom: 2vh;
-  border-bottom: 1px solid #f04b47;
+  border-bottom: 1px solid #F04B47;
 }
 .FeaturedSidebar.affix-top {
   position: static;
@@ -39,11 +39,11 @@
 .featured-charities-header {
   font-size: 1em;
   color: #262741;
-  border-bottom: 2px solid #f04b47;
+  border-bottom: 2px solid #F04B47;
 }
 .btn-showall {
-  background-color: #a49f79;
-  color: #ffffff;
+  background-color: #A49F79;
+  color: #FFFFFF;
 }
 .sogive-search {
   width: 100% !important;
