adjusted stylings for mobile devices

--- a/web/style/Donation.less
+++ b/web/style/Donation.less
@@ -19,6 +19,25 @@
 	border-color: transparent !important;
 }
 
+@media screen and (max-width: 760px) {
+	.sogive-donate-btn {
+		width: 40% !important;
+		padding: 0px;
+	}
+	textarea.form-control { height: 100px;
+	}
+	.inputs {
+		border-right: none !important;
+	}
+	.comments {
+		text-align: justify;
+	}
+	.charity-name-div p {
+		text-align: justify;
+	}
+}
+
+
 .amount-btn {
 	width: 30px;
 	height: 30px;
