--- a/web/style/Donation.less
+++ b/web/style/Donation.less
@@ -56,6 +56,21 @@
 	background-color: @colour-04;
 }
 
+.DonationForm {
+	.impact {
+		.impact-text {
+			text-align: center;
+		}
+		.impact-text > span {
+			display: block;
+		}
+		.impact-units-amount {
+			font-size: 2.5em;
+			margin-bottom: 0;
+		}
+	}
+}
+
 .btn.active {
 	background-color: @colour-04 !important;
 	color: @colour-05 !important;
