fixed the way that project-images are seen

--- a/web/style/CharityPage.less
+++ b/web/style/CharityPage.less
@@ -1,8 +1,8 @@
 @import "colours.less";
 
 img.project-image {
-	width:auto;
-	max-height:300px;
+	max-width:100%;
+	height:auto;
 }
 
 .charity-logo-div {
@@ -17,11 +17,6 @@ img.project-image {
 
 .CharityProfile {
 	font-size: 1em;
-}
-
-.project-image {
-	width: 30vh;
-	height: auto;
 }
 
 .upper-padding {
