--- a/web/style/main.less
+++ b/web/style/main.less
@@ -63,6 +63,9 @@ img.logo-large {
 	flex-wrap: nowrap;
 	justify-content: center; // flex-start | flex-end | center | space-between | space-around;
 }
+.flexbox {
+	display: flex;
+}
 .flexitem {
 
 }
