--- a/web/style/main.less
+++ b/web/style/main.less
@@ -52,6 +52,7 @@ img.logo-large {
 @import "animation.less";
 
 // Page specific stuff
+@import "EditCharityPage.less";
 @import "SearchPage.less";
 @import "CharityPage.less";
 @import "Donation.less";
